--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1"
   }
