--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "lodash.clonedeep": "^4.5.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1",
